[tool.poetry]
name = "pil-discord-txt"
version = "0.1.5"
description = "A cool tool to make your char to a png!"
authors = ["Injoon Oh <injoon5@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
