[tool.poetry]
name = "pil-discord-txt"
version = "0.1.5"
description = "A cool tool to make your char to a png!"
authors = ["Injoon Oh <injoon5@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
